# GameTetris

./: Algorithm.h  Board.cpp  Board.h  Button.cpp  Button.h  CMakeLists.txt  Exceptions.h  Figure.cpp  Figure.h  Game.cpp  Game.h  GameMenu.cpp  GameMenu.h  Level.cpp  Level.h  List.h  Picture.cpp  Picture.h  PlayerInfo.cpp  PlayerInfo.h  Queue.h  Sprite.h  Text.cpp  Text.h  header.h  main.cpp
Documentation/: ClassDiagram.drawio  Job sheet.doc  ProgramCode.docx  checkAndClearFilledLines.drawio  deleteLine().drawio  Пояснительная записка.docx
Documentation/src/: preamble.tex
